Fix Payment Received Notifications for Internal Transfers