@@ -3,6 +3,7 @@ package com.aratiri.aratiri.config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.env.Environment;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -13,17 +14,26 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Value("${aratiri.cors.allowed.origins}")
-    private List<String> allowedOrigins;
+    private final List<String> allowedOrigins;
+    private final Environment env;
+
+    public CorsConfig(@Value("${aratiri.cors.allowed.origins}") List<String> allowedOrigins, Environment env) {
+        this.allowedOrigins = allowedOrigins;
+        this.env = env;
+    }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(allowedOrigins);
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        List<String> activeProfiles = Arrays.asList(env.getActiveProfiles());
+        if (activeProfiles.contains("dev") || activeProfiles.contains("local")) {
+            configuration.setAllowedOriginPatterns(List.of("http://localhost:*", "http://127.0.0.1:*", "localhost:**"));
+        } else {
+            configuration.setAllowedOrigins(allowedOrigins);
+        }
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
